--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "backend": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && rm -rf build && npm install && npm run build"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
