--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && rm -rf build && npm install && npm run build"
-
+    "build": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
