--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "rm -rf build && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.7.0",
+    "morgan": "^1.10.0",
     "react-cookie": "^4.1.1",
     "uuid": "^8.3.2"
   },
