--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "rm -rf build && npm install && npm run build"
+    "build": "npm install && npm run build"
   },
   "repository": {
     "type": "git",
