--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm build --production"
+    "build": "cd index && npm install"
   },
   "repository": {
     "type": "git",
