updated index for heroku test

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = 'mongodb+srv://dinruser:matthew12@cluster0.8uknu.mongodb.net/app-data?retryWrites=true&w=majority'
+export const MONGODB_URI = 'mongodb+srv://dinruser:matthew12@cluster0.8uknu.mongodb.net/app-data?retryWrites=true&w=majority'
