--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "nodemon": "^2.0.17",
     "react-cookie": "^4.1.1",
     "uuid": "^8.3.2"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   }
 }
