--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-export const MONGODB_URI = 'mongodb+srv://dinruser:matthew12@cluster0.8uknu.mongodb.net/app-data?retryWrites=true&w=majority'
+MONGODB_URI = 'mongodb+srv://dinruser:matthew12@cluster0.8uknu.mongodb.net/app-data?retryWrites=true&w=majority'
 
-export const PORT = 8000
+PORT = 8000
