put engine-node version 18.4.0 in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Week of March 28th, 2022 *** [LinkedIn](https://www.linkedin.com/in/eric-lantz/) | [Github](https://github.com/ericmlantz) *** ### **Table of Contents** 1. [Description](#description) 2. [Technology](#technology) 3. [Getting Started](#started) 4. [Screenshots](#screenshots) 5. [Future Updates](#updates) 6. [Credits](#updates) ***",
   "main": "index.js",
+  "engines": { 
+    "node": "18.4.0" 
+ },
   "scripts": {
     "start": "node index.js",
     "start:dev": "nodemon -r dotenv/config index.js",
